--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 </head>
 <body>
     <header>
+        <a href="#" title="Booki"><img src="/assets/img/Booki.png" srcset="/assets/img/Booki@3x.png 3x" alt="Logo Booki"></a>
+        <nav role="navigation" aria-label="Menu principal">
+            <ul>
+                <li>
+                    <a href="#">Hébergement</a>
+                </li>
+                <li>
+                    <a href="#">Activités</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     <main>
     </main>
