Add box-sizing normalize.css. Intégration header

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 <body>
     <header>
-        <a href="#" title="Booki"><img src="/assets/img/Booki.png" srcset="/assets/img/Booki@3x.png 3x" alt="Logo Booki"></a>
+        <a class="logo" href="#" title="Booki"><img src="/assets/img/Booki.png" srcset="/assets/img/Booki@3x.png 3x" alt="Logo Booki"></a>
         <nav role="navigation" aria-label="Menu principal">
             <ul>
-                <li>
-                    <a href="#">Hébergement</a>
+                <li class="active">
+                    <a href="#lodgings">Hébergements</a>
                 </li>
                 <li>
-                    <a href="#">Activités</a>
+                    <a href="#activities">Activités</a>
                 </li>
             </ul>
         </nav>
