--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Booki</title>
 </head>
 <body>
     <header>
-        <a class="logo" href="#" title="Booki"><img src="/assets/img/Booki.png" srcset="/assets/img/Booki@3x.png 3x" alt="Logo Booki"></a>
+        <a class="logo" href="#" title="Booki">
+            <img src="/assets/img/Booki.png" srcset="/assets/img/Booki@3x.png 3x" alt="Logo Booki">
+        </a>
         <nav role="navigation" aria-label="Menu principal">
             <ul>
                 <li class="active">
