--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/all.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Booki</title>
 </head>
 <body>
     <header>
         <a class="logo" href="#" title="Booki">
-            <img src="/assets/img/Booki.png" srcset="/assets/img/Booki@3x.png 3x" alt="Logo Booki">
+            <img src="assets/img/Booki.png" srcset="assets/img/Booki@3x.png 3x" alt="Logo Booki">
         </a>
         <nav role="navigation" aria-label="Menu principal">
             <ul>
@@ -28,6 +29,21 @@
         </nav>
     </header>
     <main>
+        <section class="search">
+            <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+            <p>En plein centre ville ou en pleine nature</p>
+            <form id="form">
+                <div class="search-container">
+                    <i class="fas fa-map-marker-alt"></i>
+                    <input type="text" placeholder="Marseille, France">
+                    <button>
+                        <span>Rechercher</span>
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+
+            </form>
+        </section>
     </main>
 </body>
 </html>
