--- a/index.html
+++ b/index.html
@@ -44,6 +44,31 @@
                         <span class="sr-only">Rechercher</span>
                     </button>
                 </div>
+                <fieldset>
+                    <h2>Filtres</h2>
+                    <div>
+                        <label>
+                            <i class="fas fa-money-bill-wave"></i>
+                            <input class="sr-only" type="checkbox" name="filter">
+                            <span>économique</span>
+                        </label>
+                        <label>
+                            <i class="fas fa-child"></i>
+                            <input class="sr-only" type="checkbox" name="filter">
+                            <span>familial</span>
+                        </label>
+                        <label>
+                            <i class="fas fa-heart"></i>
+                            <input class="sr-only" type="checkbox" name="filter">
+                            <span>romantique</span>
+                        </label>
+                        <label>
+                            <i class="fas fa-dog"></i>
+                            <input class="sr-only" type="checkbox" name="filter">
+                            <span>animaux&nbsp;autorisés</span>
+                        </label>
+                    </div>
+                </fieldset>
             </form>
         </section>
     </main>
