--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <label>
                             <i class="fas fa-dog"></i>
                             <input class="sr-only" type="checkbox" name="filter">
-                            <span>animaux&nbsp;autorisés</span>
+                            <span>animaux&nbsp;<span>autorisés</span></span>
                         </label>
                     </div>
                 </fieldset>
