--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     </div>
                 </fieldset>
             </form>
+            <p class="info-results"><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </section>
     </main>
 </body>
