Import img. End card

--- a/index.html
+++ b/index.html
@@ -72,6 +72,24 @@
             </form>
             <p class="info-results"><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </section>
+        <section class="results-container">
+            <section id="lodgings">
+                <article>
+                    <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                    <h3>
+                        <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                    </h3>
+                    <p>Nuit à partir de <strong>25€</strong></p>
+                    <div class="rating">
+                        <i class="fas fa-star checked"></i>
+                        <i class="fas fa-star checked"></i>
+                        <i class="fas fa-star checked"></i>
+                        <i class="fas fa-star checked"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </article>
+            </section>
+        </section>
     </main>
 </body>
 </html>
