Start popular card

--- a/index.html
+++ b/index.html
@@ -89,6 +89,25 @@
                     </div>
                 </article>
             </section>
+
+            <section id="popular">
+                <article>
+                    <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                    <div class="details-container">
+                        <h3>
+                            <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">hôtel le soleil du matin</a>
+                        </h3>
+                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <div class="rating">
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                </article>
+            </section>
         </section>
     </main>
 </body>
