--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <p class="info-results"><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </section>
         <section class="results-container">
-            <section id="lodgings">
+            <section id="lodgings" class="lodgings-section">
                 <article>
                     <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
                     <h3>
@@ -90,12 +90,12 @@
                 </article>
             </section>
 
-            <section id="popular">
+            <section id="popular" class="popular-section">
                 <article>
                     <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
                     <div class="details-container">
                         <h3>
-                            <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">hôtel le soleil du matin</a>
+                            <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
                         </h3>
                         <p>Nuit à partir de <strong>25€</strong></p>
                         <div class="rating">
