--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                         <span class="sr-only">Rechercher</span>
                     </button>
                 </div>
+            </form>
                 <fieldset>
                     <h2>Filtres</h2>
                     <div>
