--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a class="logo" href="#" title="Booki">
             <img src="assets/img/Booki.png" srcset="assets/img/Booki@3x.png 3x" alt="Logo Booki">
         </a>
+
         <nav role="navigation" aria-label="Menu principal">
             <ul>
                 <li class="active">
@@ -28,10 +29,12 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section class="search">
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre ville ou en pleine nature</p>
+
             <form id="search-form" role="search">
                 <div class="search-container">
                     <label class="sr-only" for="search-field">Lieu de recherche</label>
@@ -45,34 +48,36 @@
                     </button>
                 </div>
             </form>
-                <fieldset>
-                    <h2>Filtres</h2>
-                    <div>
-                        <label>
-                            <i class="fas fa-money-bill-wave"></i>
-                            <input class="sr-only" type="checkbox" name="filter">
-                            <span>économique</span>
-                        </label>
-                        <label>
-                            <i class="fas fa-child"></i>
-                            <input class="sr-only" type="checkbox" name="filter">
-                            <span>familial</span>
-                        </label>
-                        <label>
-                            <i class="fas fa-heart"></i>
-                            <input class="sr-only" type="checkbox" name="filter">
-                            <span>romantique</span>
-                        </label>
-                        <label>
-                            <i class="fas fa-dog"></i>
-                            <input class="sr-only" type="checkbox" name="filter">
-                            <span>animaux&nbsp;<span>autorisés</span></span>
-                        </label>
-                    </div>
-                </fieldset>
-            </form>
+
+            <div class="filter">
+                <h2>Filtres</h2>
+                <div>
+                    <label>
+                        <i class="fas fa-money-bill-wave"></i>
+                        <input class="sr-only" type="checkbox" name="filter">
+                        <span>économique</span>
+                    </label>
+                    <label>
+                        <i class="fas fa-child"></i>
+                        <input class="sr-only" type="checkbox" name="filter">
+                        <span>familial</span>
+                    </label>
+                    <label>
+                        <i class="fas fa-heart"></i>
+                        <input class="sr-only" type="checkbox" name="filter">
+                        <span>romantique</span>
+                    </label>
+                    <label>
+                        <i class="fas fa-dog"></i>
+                        <input class="sr-only" type="checkbox" name="filter">
+                        <span>animaux&nbsp;<span>autorisés</span></span>
+                    </label>
+                </div>
+            </div>
+
             <p class="info-results"><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </section>
+        
         <section class="results-container">
             <section id="lodgings" class="lodgings-section">
                 <article>
