--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav role="navigation" aria-label="Menu principal">
             <ul>
                 <li class="active">
-                    <a href="#lodgings">Hébergements</a>
+                    <a href="#results">Hébergements</a>
                 </li>
                 <li>
                     <a href="#activities">Activités</a>
@@ -77,31 +77,16 @@
 
             <p class="info-results"><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </section>
-        
-        <section class="results-container">
-            <section id="lodgings" class="lodgings-section">
-                <article>
-                    <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
-                    <h3>
-                        <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
-                    </h3>
-                    <p>Nuit à partir de <strong>25€</strong></p>
-                    <div class="rating">
-                        <i class="fas fa-star checked"></i>
-                        <i class="fas fa-star checked"></i>
-                        <i class="fas fa-star checked"></i>
-                        <i class="fas fa-star checked"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                </article>
-            </section>
 
-            <section id="popular" class="popular-section">
-                <article>
-                    <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
-                    <div class="details-container">
+        <section id="results" class="results-container">
+            <section id="lodgings" class="lodgings-section cards-section">
+                <h2>Hébergements à Marseille</h2>
+
+                <div class="cards-container">
+                    <article>
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
                         <h3>
-                            <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
+                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
                         </h3>
                         <p>Nuit à partir de <strong>25€</strong></p>
                         <div class="rating">
@@ -111,8 +96,157 @@
                             <i class="fas fa-star checked"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                    </div>
-                </article>
+                    </article>
+
+                    <article>
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        <h3>
+                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                        </h3>
+                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <div class="rating">
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </article>
+
+                    <article>
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        <h3>
+                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                        </h3>
+                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <div class="rating">
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </article>
+
+                    <article>
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        <h3>
+                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                        </h3>
+                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <div class="rating">
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </article>
+
+                    <article>
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        <h3>
+                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                        </h3>
+                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <div class="rating">
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </article>
+
+                    <article>
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        <h3>
+                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                        </h3>
+                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <div class="rating">
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </article>
+                </div>
+
+                <button class="more">Afficher plus</button>
+            </section>
+
+            <section id="popular" class="popular-section cards-section">
+                <h2>Les plus populaires</h2>
+
+                <div class="cards-container">
+                    <article>
+                        <div class="img">
+                            <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        </div>
+
+                        <div class="details-container">
+                            <h3>
+                                <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
+                            </h3>
+
+                            <p>Nuit à partir de <strong>25€</strong></p>
+
+                            <div class="rating">
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article>
+                        <div class="img">
+                            <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        </div>
+
+                        <div class="details-container">
+                            <h3>
+                                <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
+                            </h3>
+
+                            <p>Nuit à partir de <strong>25€</strong></p>
+
+                            <div class="rating">
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article>
+                        <div class="img">
+                            <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        </div>
+
+                        <div class="details-container">
+                            <h3>
+                                <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
+                            </h3>
+
+                            <p>Nuit à partir de <strong>25€</strong></p>
+
+                            <div class="rating">
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                    </article>
+                </div>
             </section>
         </section>
     </main>
