Update cards containers. Start activities

--- a/index.html
+++ b/index.html
@@ -249,6 +249,71 @@
                 </div>
             </section>
         </section>
+
+        <section id="activities" class="activities">
+            <h2>Activités à Marseille</h2>
+            <div class="cards-container">
+                <article>
+                    <div class="img">
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                    </div>
+
+                    <h3>
+                        <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
+                    </h3>
+                </article>
+
+                <article>
+                    <div class="img">
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                    </div>
+
+                    <h3>
+                        <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
+                    </h3>
+                </article>
+
+                <article>
+                    <div class="img">
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                    </div>
+
+                    <h3>
+                        <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
+                    </h3>
+                </article>
+
+                <article>
+                    <div class="img">
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                    </div>
+
+                    <h3>
+                        <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
+                    </h3>
+                </article>
+
+                <article>
+                    <div class="img">
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                    </div>
+
+                    <h3>
+                        <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
+                    </h3>
+                </article>
+
+                <article>
+                    <div class="img">
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                    </div>
+
+                    <h3>
+                        <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
+                    </h3>
+                </article>
+            </div>
+        </section>
     </main>
 </body>
 </html>
