--- a/index.html
+++ b/index.html
@@ -57,16 +57,19 @@
                         <input class="sr-only" type="checkbox" name="filter">
                         <span>économique</span>
                     </label>
+
                     <label>
                         <i class="fas fa-child"></i>
                         <input class="sr-only" type="checkbox" name="filter">
                         <span>familial</span>
                     </label>
+
                     <label>
                         <i class="fas fa-heart"></i>
                         <input class="sr-only" type="checkbox" name="filter">
                         <span>romantique</span>
                     </label>
+
                     <label>
                         <i class="fas fa-dog"></i>
                         <input class="sr-only" type="checkbox" name="filter">
@@ -85,10 +88,52 @@
                 <div class="cards-container">
                     <article>
                         <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+
                         <h3>
                             <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
                         </h3>
+
                         <p>Nuit à partir de <strong>25€</strong></p>
+
+                        <!-- V1 Accessibility rating icons -->
+                        <div class="rating">
+                            <i class="fas fa-star checked" aria-hidden="true"></i>
+                            <i class="fas fa-star checked" aria-hidden="true"></i>
+                            <i class="fas fa-star checked" aria-hidden="true"></i>
+                            <i class="fas fa-star checked" aria-hidden="true"></i>
+                            <i class="fas fa-star" aria-hidden="true"></i>
+                            <span class="sr-only">Note: 4 sur 5</span>
+                        </div>
+                    </article>
+
+                    <article>
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+
+                        <h3>
+                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                        </h3>
+
+                        <p>Nuit à partir de <strong>25€</strong></p>
+
+                        <!-- V2 Accessibility rating icons -->
+                        <div class="rating" role="img" aria-label="Note: 4 sur 5">
+                            <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                            <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                            <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                            <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
+                            <i class="fas fa-star" role="img" aria-hidden="true"></i>
+                        </div>
+                    </article>
+
+                    <article>
+                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+
+                        <h3>
+                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                        </h3>
+
+                        <p>Nuit à partir de <strong>25€</strong></p>
+
                         <div class="rating">
                             <i class="fas fa-star checked"></i>
                             <i class="fas fa-star checked"></i>
@@ -100,10 +145,13 @@
 
                     <article>
                         <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+
                         <h3>
                             <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
                         </h3>
+
                         <p>Nuit à partir de <strong>25€</strong></p>
+
                         <div class="rating">
                             <i class="fas fa-star checked"></i>
                             <i class="fas fa-star checked"></i>
@@ -115,10 +163,13 @@
 
                     <article>
                         <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+
                         <h3>
                             <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
                         </h3>
+
                         <p>Nuit à partir de <strong>25€</strong></p>
+
                         <div class="rating">
                             <i class="fas fa-star checked"></i>
                             <i class="fas fa-star checked"></i>
@@ -130,41 +181,14 @@
 
                     <article>
                         <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
-                        <h3>
-                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
-                        </h3>
-                        <p>Nuit à partir de <strong>25€</strong></p>
-                        <div class="rating">
-                            <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </article>
 
-                    <article>
-                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
                         <h3>
                             <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
                         </h3>
-                        <p>Nuit à partir de <strong>25€</strong></p>
-                        <div class="rating">
-                            <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </article>
 
-                    <article>
-                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
-                        <h3>
-                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
-                        </h3>
                         <p>Nuit à partir de <strong>25€</strong></p>
                         <div class="rating">
+                            
                             <i class="fas fa-star checked"></i>
                             <i class="fas fa-star checked"></i>
                             <i class="fas fa-star checked"></i>
