Update flex Hébergements

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                     </article>
 
                     <article>
-                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        <img src="assets/img/4_small/port.jpg" alt="Chambre hôtel du port">
 
                         <h3>
-                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                            <a href="#" target="_blank" title="Détails hôtel du port">Hôtel du port</a>
                         </h3>
 
-                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <p>Nuit à partir de <strong>52€</strong></p>
 
                         <!-- V2 Accessibility rating icons -->
                         <div class="rating" role="img" aria-label="Note: 4 sur 5">
@@ -121,18 +121,18 @@
                             <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
                             <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
                             <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
-                            <i class="fas fa-star" role="img" aria-hidden="true"></i>
+                            <i class="fas fa-star checked" role="img" aria-hidden="true"></i>
                         </div>
                     </article>
 
                     <article>
-                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        <img src="assets/img/4_small/mouettes.jpg" alt="Chambre Hôtel Les mouettes">
 
                         <h3>
-                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                            <a href="#" target="_blank" title="Détails Hôtel Les mouettes">Hôtel Les mouettes</a>
                         </h3>
 
-                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <p>Nuit à partir de <strong>76€</strong></p>
 
                         <div class="rating">
                             <i class="fas fa-star checked"></i>
@@ -144,15 +144,33 @@
                     </article>
 
                     <article>
-                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        <img src="assets/img/4_small/mer.jpg" alt="Chambre Hôtel de la mer">
 
                         <h3>
-                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                            <a href="#" target="_blank" title="Détails Hôtel de la mer">Hôtel de la mer</a>
                         </h3>
 
-                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <p>Nuit à partir de <strong>46€</strong></p>
 
                         <div class="rating">
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star checked"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </article>
+
+                    <article>
+                        <img src="assets/img/3_medium/panier.jpg" alt="Chambre Auberge Le Panier">
+
+                        <h3>
+                            <a href="#" target="_blank" title="Détails Auberge Le Panier">Auberge Le Panier</a>
+                        </h3>
+
+                        <p>Nuit à partir de <strong>23€</strong></p>
+                        <div class="rating">
+
                             <i class="fas fa-star checked"></i>
                             <i class="fas fa-star checked"></i>
                             <i class="fas fa-star checked"></i>
@@ -162,38 +180,20 @@
                     </article>
 
                     <article>
-                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                        <img src="assets/img/4_small/amina.jpg" alt="Chambre Hôtel chez Amina">
 
                         <h3>
-                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
+                            <a href="#" target="_blank" title="Détails Hôtel chez Amina">Hôtel chez Amina</a>
                         </h3>
 
-                        <p>Nuit à partir de <strong>25€</strong></p>
+                        <p>Nuit à partir de <strong>96€</strong></p>
 
                         <div class="rating">
                             <i class="fas fa-star checked"></i>
                             <i class="fas fa-star checked"></i>
                             <i class="fas fa-star checked"></i>
                             <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star"></i>
-                        </div>
-                    </article>
-
-                    <article>
-                        <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
-
-                        <h3>
-                            <a href="#" target="_blank" title="Détails Auberge La Cannebière">Auberge La Cannebière</a>
-                        </h3>
-
-                        <p>Nuit à partir de <strong>25€</strong></p>
-                        <div class="rating">
-                            
                             <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star checked"></i>
-                            <i class="fas fa-star"></i>
                         </div>
                     </article>
                 </div>
