Update flex popular

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <div class="cards-container">
                     <article>
                         <div class="img">
-                            <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                            <img src="assets/img/4_small/soleil.jpg" alt="Chambre Hôtel Le soleil du matin">
                         </div>
 
                         <div class="details-container">
@@ -215,7 +215,29 @@
                                 <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
                             </h3>
 
-                            <p>Nuit à partir de <strong>25€</strong></p>
+                            <p>Nuit à partir de <strong>128€</strong></p>
+
+                            <div class="rating">
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                                <i class="fas fa-star checked"></i>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article>
+                        <div class="img">
+                            <img src="assets/img/4_small/coeur_de_l_eau.jpg" alt="Chambre Au coeur de l'eau">
+                        </div>
+
+                        <div class="details-container">
+                            <h3>
+                                <a href="#" target="_blank" title="Détails Chambres d'hôtes Au coeur de l'eau">Au coeur de l'eau Chambres d'hôtes</a>
+                            </h3>
+
+                            <p>Nuit à partir de <strong>71€</strong></p>
 
                             <div class="rating">
                                 <i class="fas fa-star checked"></i>
@@ -229,37 +251,15 @@
 
                     <article>
                         <div class="img">
-                            <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
+                            <img src="assets/img/4_small/bleu_blanc.jpg" alt="Chambre Hôtel Tout bleu et Blanc">
                         </div>
 
                         <div class="details-container">
                             <h3>
-                                <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
+                                <a href="#" target="_blank" title="Détails Hôtel Tout bleu et blanc">Hôtel Tout bleu et Blanc</a>
                             </h3>
 
-                            <p>Nuit à partir de <strong>25€</strong></p>
-
-                            <div class="rating">
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star checked"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                        </div>
-                    </article>
-
-                    <article>
-                        <div class="img">
-                            <img src="assets/img/4_small/cannebiere.jpg" alt="Chambre auberge La Cannebière">
-                        </div>
-
-                        <div class="details-container">
-                            <h3>
-                                <a href="#" target="_blank" title="Détails Hôtel Le soleil du matin">Hôtel Le soleil du matin</a>
-                            </h3>
-
-                            <p>Nuit à partir de <strong>25€</strong></p>
+                            <p>Nuit à partir de <strong>68€</strong></p>
 
                             <div class="rating">
                                 <i class="fas fa-star checked"></i>
