Marges header.Active menu item. Border filtres.Icon popular.Update responsive cards container

--- a/index.html
+++ b/index.html
@@ -202,7 +202,10 @@
             </section>
 
             <section id="popular" class="popular-section cards-section">
-                <h2>Les plus populaires</h2>
+                <h2>
+                    <span>Les plus populaires</span>
+                    <i class="fas fa-chart-line"></i>
+                </h2>
 
                 <div class="cards-container">
                     <article>
